# solarweather-watcher

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  k8s-example.yaml
.githnub/workflows/: deploy.yml
.github/workflows/: deploy.yml
src/: main.rs
